tests/Tree/positive/test003.jvt

function calculate(integer, integer, integer) : integer;
function main() : *;

function calculate(integer, integer, integer) : integer {
  add(mul(arg[2], arg[1]), arg[0])
}

function main() : * {
  call(calloc[calculate](5, 3), 2)
}
