tests/Tree/negative/test006.jvt
-- invalid closure call

function main() : * {
  call(2, 1)
}
